# sdl

./: .gitignore  Makefile  README.md  graphics.cpp  graphics.h  main.cpp  play
Asteroids/: CMakeLists.txt  Makefile  asteroids  main.cpp
Asteroids/include/: asteroid.h  background.h  bullet.h  classes.h  constants.h  input.h  player.h  star.h  window.h
Asteroids/src/: asteroid.cpp  background.cpp  bullet.cpp  input.cpp  main.cpp  player.cpp  star.cpp  window.cpp
Breakout/: CMakeLists.txt  Makefile  breakout  main.cpp
Breakout/include/: classes.h  constants.h  patterns.h
Breakout/src/: main.cpp  patterns.cpp
lib/pkgconfig/: sdl2.pc
